// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaskedInput should render without throwing an error 1`] = `
<TimeDropdown
  fieldError={[Function]}
  fieldName="test"
  values={
    Object {
      "ampm": "AM",
      "hour": 4,
      "minute": 5,
    }
  }
>
  <Menu
    compact={true}
  >
    <div
      className="ui compact menu"
    >
      <Dropdown
        additionLabel="Add "
        additionPosition="top"
        className="link item"
        closeOnBlur={true}
        deburr={false}
        error={false}
        icon=""
        id=".hour"
        minCharacters={1}
        noResultsMessage="No results found."
        openOnFocus={true}
        renderLabel={[Function]}
        scrolling={true}
        searchInput="text"
        selectOnBlur={true}
        selectOnNavigation={true}
        text="4"
        wrapSelection={true}
      >
        <Ref
          innerRef={
            Object {
              "current": <div
                aria-expanded="false"
                class="ui scrolling dropdown link item"
                id=".hour"
                role="listbox"
                tabindex="0"
              >
                <div
                  aria-live="polite"
                  class="text"
                  role="alert"
                >
                  4
                </div>
                <i
                  aria-hidden="true"
                  class="icon"
                />
                <div
                  class="menu transition"
                >
                  <div
                    class="item"
                    role="option"
                  >
                    1
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    2
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    3
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    4
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    5
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    6
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    7
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    8
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    9
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    10
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    11
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    12
                  </div>
                </div>
              </div>,
            }
          }
        >
          <RefFindNode
            innerRef={
              Object {
                "current": <div
                  aria-expanded="false"
                  class="ui scrolling dropdown link item"
                  id=".hour"
                  role="listbox"
                  tabindex="0"
                >
                  <div
                    aria-live="polite"
                    class="text"
                    role="alert"
                  >
                    4
                  </div>
                  <i
                    aria-hidden="true"
                    class="icon"
                  />
                  <div
                    class="menu transition"
                  >
                    <div
                      class="item"
                      role="option"
                    >
                      1
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      2
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      3
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      4
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      5
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      6
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      7
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      8
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      9
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      10
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      11
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      12
                    </div>
                  </div>
                </div>,
              }
            }
          >
            <div
              aria-expanded={false}
              className="ui scrolling dropdown link item"
              id=".hour"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              role="listbox"
              tabIndex={0}
            >
              <div
                aria-live="polite"
                className="text"
                role="alert"
              >
                4
              </div>
              <Icon
                as="i"
                className=""
                name=""
                onClick={[Function]}
              >
                <i
                  aria-hidden="true"
                  className="icon"
                  onClick={[Function]}
                />
              </Icon>
              <DropdownMenu
                className=""
                key="hour"
              >
                <div
                  className="menu transition"
                >
                  <DropdownItem
                    key="0"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      1
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="1"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      2
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="2"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      3
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="3"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      4
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="4"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      5
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="5"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      6
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="6"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      7
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="7"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      8
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="8"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      9
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="9"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      10
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="10"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      11
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="11"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      12
                    </div>
                  </DropdownItem>
                </div>
              </DropdownMenu>
            </div>
          </RefFindNode>
        </Ref>
      </Dropdown>
      <Dropdown
        additionLabel="Add "
        additionPosition="top"
        className="link item"
        closeOnBlur={true}
        deburr={false}
        disabled={false}
        error={false}
        icon=""
        id=".minute"
        minCharacters={1}
        noResultsMessage="No results found."
        openOnFocus={true}
        renderLabel={[Function]}
        scrolling={true}
        searchInput="text"
        selectOnBlur={true}
        selectOnNavigation={true}
        text="05"
        wrapSelection={true}
      >
        <Ref
          innerRef={
            Object {
              "current": <div
                aria-disabled="false"
                aria-expanded="false"
                class="ui scrolling dropdown link item"
                id=".minute"
                role="listbox"
                tabindex="0"
              >
                <div
                  aria-live="polite"
                  class="text"
                  role="alert"
                >
                  05
                </div>
                <i
                  aria-hidden="true"
                  class="icon"
                />
                <div
                  class="menu transition"
                >
                  <div
                    class="item"
                    role="option"
                  >
                    00
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    01
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    02
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    03
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    04
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    05
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    06
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    07
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    08
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    09
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    10
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    11
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    12
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    13
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    14
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    15
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    16
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    17
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    18
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    19
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    20
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    21
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    22
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    23
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    24
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    25
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    26
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    27
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    28
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    29
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    30
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    31
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    32
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    33
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    34
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    35
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    36
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    37
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    38
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    39
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    40
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    41
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    42
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    43
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    44
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    45
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    46
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    47
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    48
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    49
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    50
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    51
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    52
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    53
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    54
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    55
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    56
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    57
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    58
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    59
                  </div>
                </div>
              </div>,
            }
          }
        >
          <RefFindNode
            innerRef={
              Object {
                "current": <div
                  aria-disabled="false"
                  aria-expanded="false"
                  class="ui scrolling dropdown link item"
                  id=".minute"
                  role="listbox"
                  tabindex="0"
                >
                  <div
                    aria-live="polite"
                    class="text"
                    role="alert"
                  >
                    05
                  </div>
                  <i
                    aria-hidden="true"
                    class="icon"
                  />
                  <div
                    class="menu transition"
                  >
                    <div
                      class="item"
                      role="option"
                    >
                      00
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      01
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      02
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      03
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      04
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      05
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      06
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      07
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      08
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      09
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      10
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      11
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      12
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      13
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      14
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      15
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      16
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      17
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      18
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      19
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      20
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      21
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      22
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      23
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      24
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      25
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      26
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      27
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      28
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      29
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      30
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      31
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      32
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      33
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      34
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      35
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      36
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      37
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      38
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      39
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      40
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      41
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      42
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      43
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      44
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      45
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      46
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      47
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      48
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      49
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      50
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      51
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      52
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      53
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      54
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      55
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      56
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      57
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      58
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      59
                    </div>
                  </div>
                </div>,
              }
            }
          >
            <div
              aria-disabled={false}
              aria-expanded={false}
              className="ui scrolling dropdown link item"
              id=".minute"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              role="listbox"
              tabIndex={0}
            >
              <div
                aria-live="polite"
                className="text"
                role="alert"
              >
                05
              </div>
              <Icon
                as="i"
                className=""
                name=""
                onClick={[Function]}
              >
                <i
                  aria-hidden="true"
                  className="icon"
                  onClick={[Function]}
                />
              </Icon>
              <DropdownMenu
                className=""
                key="minute"
              >
                <div
                  className="menu transition"
                >
                  <DropdownItem
                    key="0"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      00
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="1"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      01
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="2"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      02
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="3"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      03
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="4"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      04
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="5"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      05
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="6"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      06
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="7"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      07
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="8"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      08
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="9"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      09
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="10"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      10
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="11"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      11
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="12"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      12
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="13"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      13
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="14"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      14
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="15"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      15
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="16"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      16
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="17"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      17
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="18"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      18
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="19"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      19
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="20"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      20
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="21"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      21
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="22"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      22
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="23"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      23
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="24"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      24
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="25"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      25
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="26"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      26
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="27"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      27
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="28"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      28
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="29"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      29
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="30"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      30
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="31"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      31
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="32"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      32
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="33"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      33
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="34"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      34
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="35"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      35
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="36"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      36
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="37"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      37
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="38"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      38
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="39"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      39
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="40"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      40
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="41"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      41
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="42"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      42
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="43"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      43
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="44"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      44
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="45"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      45
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="46"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      46
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="47"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      47
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="48"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      48
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="49"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      49
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="50"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      50
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="51"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      51
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="52"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      52
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="53"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      53
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="54"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      54
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="55"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      55
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="56"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      56
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="57"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      57
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="58"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      58
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="59"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      59
                    </div>
                  </DropdownItem>
                </div>
              </DropdownMenu>
            </div>
          </RefFindNode>
        </Ref>
      </Dropdown>
      <Dropdown
        additionLabel="Add "
        additionPosition="top"
        className="link item"
        closeOnBlur={true}
        deburr={false}
        disabled={false}
        error={false}
        icon=""
        id=".ampm"
        minCharacters={1}
        noResultsMessage="No results found."
        openOnFocus={true}
        renderLabel={[Function]}
        searchInput="text"
        selectOnBlur={true}
        selectOnNavigation={true}
        text="AM"
        wrapSelection={true}
      >
        <Ref
          innerRef={
            Object {
              "current": <div
                aria-disabled="false"
                aria-expanded="false"
                class="ui dropdown link item"
                id=".ampm"
                role="listbox"
                tabindex="0"
              >
                <div
                  aria-live="polite"
                  class="text"
                  role="alert"
                >
                  AM
                </div>
                <i
                  aria-hidden="true"
                  class="icon"
                />
                <div
                  class="menu transition"
                >
                  <div
                    class="item"
                    role="option"
                  >
                    AM
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    PM
                  </div>
                </div>
              </div>,
            }
          }
        >
          <RefFindNode
            innerRef={
              Object {
                "current": <div
                  aria-disabled="false"
                  aria-expanded="false"
                  class="ui dropdown link item"
                  id=".ampm"
                  role="listbox"
                  tabindex="0"
                >
                  <div
                    aria-live="polite"
                    class="text"
                    role="alert"
                  >
                    AM
                  </div>
                  <i
                    aria-hidden="true"
                    class="icon"
                  />
                  <div
                    class="menu transition"
                  >
                    <div
                      class="item"
                      role="option"
                    >
                      AM
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      PM
                    </div>
                  </div>
                </div>,
              }
            }
          >
            <div
              aria-disabled={false}
              aria-expanded={false}
              className="ui dropdown link item"
              id=".ampm"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              role="listbox"
              tabIndex={0}
            >
              <div
                aria-live="polite"
                className="text"
                role="alert"
              >
                AM
              </div>
              <Icon
                as="i"
                className=""
                name=""
                onClick={[Function]}
              >
                <i
                  aria-hidden="true"
                  className="icon"
                  onClick={[Function]}
                />
              </Icon>
              <DropdownMenu
                className=""
              >
                <div
                  className="menu transition"
                >
                  <DropdownItem
                    key="am"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      AM
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="pm"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      PM
                    </div>
                  </DropdownItem>
                </div>
              </DropdownMenu>
            </div>
          </RefFindNode>
        </Ref>
      </Dropdown>
    </div>
  </Menu>
</TimeDropdown>
`;

exports[`MaskedInput should render without values without throwing an error 1`] = `
<TimeDropdown
  fieldError={[Function]}
  fieldName="test"
  values={Object {}}
>
  <Menu
    compact={true}
  >
    <div
      className="ui compact menu"
    >
      <Dropdown
        additionLabel="Add "
        additionPosition="top"
        className="link item"
        closeOnBlur={true}
        deburr={false}
        error={false}
        icon=""
        id=".hour"
        minCharacters={1}
        noResultsMessage="No results found."
        openOnFocus={true}
        renderLabel={[Function]}
        scrolling={true}
        searchInput="text"
        selectOnBlur={true}
        selectOnNavigation={true}
        text="Hour"
        wrapSelection={true}
      >
        <Ref
          innerRef={
            Object {
              "current": <div
                aria-expanded="false"
                class="ui scrolling dropdown link item"
                id=".hour"
                role="listbox"
                tabindex="0"
              >
                <div
                  aria-live="polite"
                  class="text"
                  role="alert"
                >
                  Hour
                </div>
                <i
                  aria-hidden="true"
                  class="icon"
                />
                <div
                  class="menu transition"
                >
                  <div
                    class="item"
                    role="option"
                  >
                    1
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    2
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    3
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    4
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    5
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    6
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    7
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    8
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    9
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    10
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    11
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    12
                  </div>
                </div>
              </div>,
            }
          }
        >
          <RefFindNode
            innerRef={
              Object {
                "current": <div
                  aria-expanded="false"
                  class="ui scrolling dropdown link item"
                  id=".hour"
                  role="listbox"
                  tabindex="0"
                >
                  <div
                    aria-live="polite"
                    class="text"
                    role="alert"
                  >
                    Hour
                  </div>
                  <i
                    aria-hidden="true"
                    class="icon"
                  />
                  <div
                    class="menu transition"
                  >
                    <div
                      class="item"
                      role="option"
                    >
                      1
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      2
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      3
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      4
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      5
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      6
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      7
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      8
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      9
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      10
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      11
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      12
                    </div>
                  </div>
                </div>,
              }
            }
          >
            <div
              aria-expanded={false}
              className="ui scrolling dropdown link item"
              id=".hour"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              role="listbox"
              tabIndex={0}
            >
              <div
                aria-live="polite"
                className="text"
                role="alert"
              >
                Hour
              </div>
              <Icon
                as="i"
                className=""
                name=""
                onClick={[Function]}
              >
                <i
                  aria-hidden="true"
                  className="icon"
                  onClick={[Function]}
                />
              </Icon>
              <DropdownMenu
                className=""
                key="hour"
              >
                <div
                  className="menu transition"
                >
                  <DropdownItem
                    key="0"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      1
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="1"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      2
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="2"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      3
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="3"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      4
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="4"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      5
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="5"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      6
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="6"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      7
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="7"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      8
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="8"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      9
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="9"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      10
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="10"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      11
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="11"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      12
                    </div>
                  </DropdownItem>
                </div>
              </DropdownMenu>
            </div>
          </RefFindNode>
        </Ref>
      </Dropdown>
      <Dropdown
        additionLabel="Add "
        additionPosition="top"
        className="link item"
        closeOnBlur={true}
        deburr={false}
        disabled={true}
        error={false}
        icon=""
        id=".minute"
        minCharacters={1}
        noResultsMessage="No results found."
        openOnFocus={true}
        renderLabel={[Function]}
        scrolling={true}
        searchInput="text"
        selectOnBlur={true}
        selectOnNavigation={true}
        wrapSelection={true}
      >
        <Ref
          innerRef={
            Object {
              "current": <div
                aria-disabled="true"
                aria-expanded="false"
                class="ui disabled scrolling dropdown link item"
                id=".minute"
                role="listbox"
                tabindex="-1"
              >
                <div
                  aria-live="polite"
                  class="text"
                  role="alert"
                />
                <i
                  aria-hidden="true"
                  class="icon"
                />
                <div
                  class="menu transition"
                />
              </div>,
            }
          }
        >
          <RefFindNode
            innerRef={
              Object {
                "current": <div
                  aria-disabled="true"
                  aria-expanded="false"
                  class="ui disabled scrolling dropdown link item"
                  id=".minute"
                  role="listbox"
                  tabindex="-1"
                >
                  <div
                    aria-live="polite"
                    class="text"
                    role="alert"
                  />
                  <i
                    aria-hidden="true"
                    class="icon"
                  />
                  <div
                    class="menu transition"
                  />
                </div>,
              }
            }
          >
            <div
              aria-disabled={true}
              aria-expanded={false}
              className="ui disabled scrolling dropdown link item"
              id=".minute"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              role="listbox"
              tabIndex={-1}
            >
              <div
                aria-live="polite"
                className="text"
                role="alert"
              />
              <Icon
                as="i"
                className=""
                name=""
                onClick={[Function]}
              >
                <i
                  aria-hidden="true"
                  className="icon"
                  onClick={[Function]}
                />
              </Icon>
              <DropdownMenu
                className=""
                key="minute"
              >
                <div
                  className="menu transition"
                />
              </DropdownMenu>
            </div>
          </RefFindNode>
        </Ref>
      </Dropdown>
      <Dropdown
        additionLabel="Add "
        additionPosition="top"
        className="link item"
        closeOnBlur={true}
        deburr={false}
        disabled={true}
        error={false}
        icon=""
        id=".ampm"
        minCharacters={1}
        noResultsMessage="No results found."
        openOnFocus={true}
        renderLabel={[Function]}
        searchInput="text"
        selectOnBlur={true}
        selectOnNavigation={true}
        text="AM/PM"
        wrapSelection={true}
      >
        <Ref
          innerRef={
            Object {
              "current": <div
                aria-disabled="true"
                aria-expanded="false"
                class="ui disabled dropdown link item"
                id=".ampm"
                role="listbox"
                tabindex="-1"
              >
                <div
                  aria-live="polite"
                  class="text"
                  role="alert"
                >
                  AM/PM
                </div>
                <i
                  aria-hidden="true"
                  class="icon"
                />
                <div
                  class="menu transition"
                >
                  <div
                    class="item"
                    role="option"
                  >
                    AM
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    PM
                  </div>
                </div>
              </div>,
            }
          }
        >
          <RefFindNode
            innerRef={
              Object {
                "current": <div
                  aria-disabled="true"
                  aria-expanded="false"
                  class="ui disabled dropdown link item"
                  id=".ampm"
                  role="listbox"
                  tabindex="-1"
                >
                  <div
                    aria-live="polite"
                    class="text"
                    role="alert"
                  >
                    AM/PM
                  </div>
                  <i
                    aria-hidden="true"
                    class="icon"
                  />
                  <div
                    class="menu transition"
                  >
                    <div
                      class="item"
                      role="option"
                    >
                      AM
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      PM
                    </div>
                  </div>
                </div>,
              }
            }
          >
            <div
              aria-disabled={true}
              aria-expanded={false}
              className="ui disabled dropdown link item"
              id=".ampm"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              role="listbox"
              tabIndex={-1}
            >
              <div
                aria-live="polite"
                className="text"
                role="alert"
              >
                AM/PM
              </div>
              <Icon
                as="i"
                className=""
                name=""
                onClick={[Function]}
              >
                <i
                  aria-hidden="true"
                  className="icon"
                  onClick={[Function]}
                />
              </Icon>
              <DropdownMenu
                className=""
              >
                <div
                  className="menu transition"
                >
                  <DropdownItem
                    key="am"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      AM
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="pm"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      PM
                    </div>
                  </DropdownItem>
                </div>
              </DropdownMenu>
            </div>
          </RefFindNode>
        </Ref>
      </Dropdown>
    </div>
  </Menu>
</TimeDropdown>
`;
